devops/kubernetes/backend/ingress/ws-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - monthlylife.kro.kr
    secretName: ml-front-tls-secret
  rules:
  - host: monthlylife.kro.kr 
    http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: back-svc
            port:
              number: 8080
